Fixes mobile nav positioned behind team image

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -68,6 +68,7 @@ nav {
         padding: 10px;
         display: flex;
         flex-direction: column;
+        z-index: 80;
     }
 
     > ul li {
